# hitony-firmware

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  PHASE1_COMPLETE.md  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  advanced_afe.cc  advanced_afe.h  app_init.cc  app_queues.cc  audio_i2s.cc  audio_i2s.h  audio_main_task.cc  audio_tasks.cc.deprecated  config.h  control_tasks.cc.deprecated  diagnostics.h  dns_server.cc  dns_server.h  idf_component.yml  led_controller.cc  led_controller.h  lvgl_ui.cc  lvgl_ui.h  main.cc  main_control_task.cc  main_old.cc.deleted  opus_decoder.cc  opus_decoder.h  opus_encoder.cc  opus_encoder.h  ota_update.cc  ota_update.h  state_machine.h  system_monitor.cc  system_monitor.h  task_manager.cc  task_manager.h  wake_word.cc  wake_word.h  wifi_provisioning.cc  wifi_provisioning.h  ws_client.cc  ws_client.h
